--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="https://static.tildacdn.com/tild3039-3433-4166-a333-626338396635/Uber_Logo-1920x960.jpg" alt="LogoUber" class="image">
         <a href="#" class="ss1"> Home</a> 
         <a href="#" class="ss2"> About</a> 
-        <a href="#" class="ss3"> Support</a>
+        <a href="https://koalalagg.github.io/777/support.html" class="ss3"> Support</a>
     </div>
         
    <div class="container">
